--- a/package.json
+++ b/package.json
@@ -12,14 +12,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ajv": "^6.12.2",
+    "ajv": "^6.12.5",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-json-validator-middleware": "^2.1.1",
     "express-jsonschema": "^1.1.6",
-    "pg": "^8.2.1"
+    "fs": "0.0.1-security",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "mysql2": "^2.1.0",
+    "path": "^0.12.7",
+    "pg": "^8.3.3",
+    "rotating-file-stream": "^2.1.3",
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.0"
   },
   "devDependencies": {
     "concurrently": "3.1.0"
