--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.6",
     "react-dropzone": "^11.0.1",
+    "react-loading-overlay": "^1.0.1",
     "react-quill": "^1.3.5",
     "react-router-config": "^5.0.1",
     "react-router-dom": "^5.0.1",
